--- a/app/static/assets/css/index.css
+++ b/app/static/assets/css/index.css
@@ -1,6 +1,7 @@
 body {
     background-color: #FEFFFF;
 }
+
 /* #17252A*/
 /* #2B7A78*/
 /* #3AAFA9*/
@@ -45,63 +46,39 @@ body {
     transition: all 0.3s ease 0s;
 }
 
-/**,*/
-/**::after,*/
-/**::before {*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*  box-sizing: inherit;*/
-/*  font-size: 62,5%;*/
-/*}*/
+.go-modal-button {
+    border: none;
+    background: #404040;
+    width: 140px;
+    height: 50px;
+    color: #ffffff !important;
+    font-weight: 100;
+    padding: 15px;
+    text-transform: uppercase;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
+}
 
-/*body {*/
-/*  height: 100vh;*/
-/*	width: 100%;*/
-/*  background: #0f2027; !* fallback for old browsers *!*/
-/*  background: linear-gradient(to right,#2c5364, #203a43, #0f2027);*/
-/*  display: flex;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*  height: 100vh;*/
-/*  color: #fff;*/
-/*}*/
+.go-modal-button:hover {
+    color: #766b6b !important;
+    text-decoration: none;
+    font-weight: 600 !important;
+    letter-spacing: 10px;
+    background: #d9cece;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+    transition: all 0.3s ease 0s;
+}
+
+.button_cont {
+    padding-bottom: 70px;
+}
 
 .modal-open .container-fluid, .modal-open .container {
     -webkit-filter: blur(3px) grayscale(90%);
 }
-
-.form__label {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.2rem;
-    margin-left: 2rem;
-    margin-top: 0.7rem;
-    display: block;
-    transition: all 0.3s;
-    transform: translateY(0rem);
-}
-
-.form__input {
-    font-family: 'Roboto', sans-serif;
-    color: #333;
-    font-size: 1.2rem;
-    margin: 0 auto;
-    padding: 1.5rem 2rem;
-    border-radius: 0.2rem;
-    background-color: rgb(255, 255, 255);
-    border: none;
-    width: 90%;
-    display: block;
-    border-bottom: 0.3rem solid transparent;
-    transition: all 0.3s;
-}
-
-.form__input:placeholder-shown + .form__label {
-    opacity: 0;
-    /*visibility: hidden;*/
-    -webkit-transform: translateY(-4rem);
-    transform: translateY(-4rem);
-}
-
 
 /*$char-w: 1ch;*/
 /*$gap: .5*$char-w;*/
@@ -109,6 +86,7 @@ body {
 /*$in-w: $n-char*($char-w + $gap);*/
 /*in-w = calc(7 * calc(1ch + 0.5 * 1ch) - calc(0.5 * 1ch)*/
 
+/* Code modal */
 .form-modal input {
     display: block;
     margin: 2em auto;
@@ -127,6 +105,24 @@ body {
     color: #465b71;
 }
 
-#enter-input-code{
+/* Name modal */
+.form-name-modal input {
+    width: 370px;
+    display: block;
+    margin: 2em auto;
+    color: #465b71;
+    border: none;
+    border-bottom: solid 2px;
+    padding: 0;
+    border-bottom-color: dimgrey;
+    font: 6ch droid sans mono, consolas, monospace;
+}
+
+.form-name-modal input:focus {
+    outline: none;
+    color: #465b71;
+}
+
+#enter-input-code {
     margin-left: 120px;
 }
