--- a/app/static/assets/css/index.css
+++ b/app/static/assets/css/index.css
@@ -76,9 +76,9 @@ body {
     padding-bottom: 70px;
 }
 
-.modal-open .container-fluid, .modal-open .container {
-    -webkit-filter: blur(3px) grayscale(90%);
-}
+/*.modal-open .container-fluid, .modal-open .container {*/
+/*    -webkit-filter: blur(3px) grayscale(90%);*/
+/*}*/
 
 /*$char-w: 1ch;*/
 /*$gap: .5*$char-w;*/
@@ -125,4 +125,26 @@ body {
 
 #enter-input-code {
     margin-left: 120px;
+}
+
+.modal.fade .modal-dialog {
+    -webkit-transform: scale(0.1);
+    -moz-transform: scale(0.1);
+    -ms-transform: scale(0.1);
+    transform: scale(0.1);
+    top: 300px;
+    opacity: 0;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.modal.fade.in .modal-dialog {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform: translate3d(0, -300px, 0);
+    transform: translate3d(0, -300px, 0);
+    opacity: 1;
 }
