--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,6 +88,36 @@
         </div>
     </div>
 
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+
+{#<p class='text-center'>#}
+{#<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#demo">#}
+{#  Open Modal#}
+{#</button>#}
+{#</p>#}
+
+{#<div class="modal fade" id="demo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">#}
+{#  <div class="modal-dialog">#}
+{#    <div class="modal-content">#}
+{#      <div class="modal-header">#}
+{#        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>#}
+{#        <h1 class="modal-title">Demo Modal</h1>#}
+{#      </div>#}
+{#      <div class="modal-body">#}
+{#        Pretty Nifty eh?#}
+{#      </div>#}
+{#      <div class="modal-footer">#}
+{#        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>#}
+{#      </div>#}
+{#    </div>#}
+{#  </div>#}
+{#</div>#}
+
+
+
+
+
+
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
