--- a/app/static/assets/css/index.css
+++ b/app/static/assets/css/index.css
@@ -1,84 +1,268 @@
-body {
-    background-color: #FEFFFF;
+html, body {
+    background: rgb(20, 20, 20);
+    text-align: center;
+    height: 100%;
+    overflow: hidden;
+    color: #f0f0f0;
 }
 
-/* #17252A*/
-/* #2B7A78*/
-/* #3AAFA9*/
-/* #DEF2F1*/
-/* #FEFFFF*/
-
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
-    border: 3px solid green;
+@media only screen and (max-width: 600px) {
 }
 
-#buttons-wrapper {
-    margin-top: 200px;
+@media only screen and (min-width: 600px) {
 }
 
-.main_button {
+#buttons-container {
+    position: relative;
+    top: 40%;
+}
+
+#code-input {
+    position: relative;
+    top: 20%;
+    display: none;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 1s;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+#name-input {
+    position: relative;
+    top: 20%;
+    display: none;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 1s;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+#buttons-prepaid {
+    position: relative;
+    top: 40%;
+}
+
+.svg-wrapper {
+    transform: translateY(-90%);
+    margin: 0 auto;
+    width: 320px;
+}
+
+.shape {
+    stroke-dasharray: 140 540;
+    stroke-dashoffset: -474;
+    stroke-width: 8px;
+    fill: transparent;
+    stroke: #696969;
+    border-bottom: 5px solid black;
+    transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+}
+
+.text {
+    font-family: 'Roboto Condensed';
+    font-size: 28px;
+    line-height: 32px;
+    letter-spacing: 8px;
+    color: #f0f0f0;
+    top: -48px;
+    position: relative;
+}
+
+.svg-wrapper:hover .shape {
+    stroke-width: 2px;
+    stroke-dashoffset: 0;
+    stroke-dasharray: 760;
+}
+
+div {
+    cursor: default;
+}
+
+#buttons-container {
+    opacity: 1;
+    transition: opacity 0.5s;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 1s;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+#buttons-fraud-api {
+    position: relative;
+    top: 35%;
+    display: none;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 1s;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+#buttons-prepaid {
+    display: none;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 1s;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 0.3;
+    }
+    60% {
+        opacity: 0.5;
+    }
+    80% {
+        opacity: 0.9;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 0.3;
+    }
+    60% {
+        opacity: 0.5;
+    }
+    80% {
+        opacity: 0.9;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.arrow div {
+    position: absolute;
+    margin-top: 100px;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.arrow div svg {
+    width: 70px;
+    height: auto;
+    margin: 0 2rem;
+    cursor: pointer;
+    overflow: visible;
+}
+
+.arrow div svg polygon, div svg path {
+    fill: #ffffff;
+    transition: all 0.5s cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.arrow div svg:hover polygon, div svg:hover path {
+    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+    fill: #ffffff;
+}
+
+.arrow div svg:hover .arrow {
+    animation: arrow-anim 2.5s cubic-bezier(0.2, 1, 0.3, 1) infinite;
+}
+
+.arrow div svg:hover .arrow-fixed {
+    animation: arrow-fixed-anim 2.5s cubic-bezier(0.2, 1, 0.3, 1) infinite;
+}
+
+@keyframes arrow-anim {
+    0% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    5% {
+        transform: translateX(-0.1rem);
+    }
+    100% {
+        transform: translateX(1rem);
+        opacity: 0;
+    }
+}
+
+@keyframes arrow-fixed-anim {
+    5% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0.4;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+#footer {
+    position: absolute;
+    bottom: 50px;
+    margin-left: 15%;
+    width: 70%;
+    color: #f0f0f0;
+    font-family: 'Roboto Condensed';
+    font-size: 18px;
+    letter-spacing: 2px;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 2s;
+    animation-name: fadeIn;
+    animation-duration: 2s;
+}
+
+hr.style14 {
+    border: 0;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, #141414, #f0f0f0, #141414);
+    background-image: -moz-linear-gradient(left, #141414, #f0f0f0, #141414);
+    background-image: -ms-linear-gradient(left, #141414, #f0f0f0, #141414);
+    background-image: -o-linear-gradient(left, #141414, #f0f0f0, #141414);
+}
+
+/* Blinking input field */
+.form__label {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s;
+    transform: translateY(0rem);
+}
+
+.form__input {
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    font-size: 1.2rem;
+    margin: 0 auto;
+    padding: 1.5rem 2rem;
+    border-radius: 0.2rem;
+    background-color: rgb(255, 255, 255);
     border: none;
-    background: #404040;
-    width: 400px;
-    height: 100px;
-    color: #ffffff !important;
-    font-weight: 100;
-    padding: 35px;
-    text-transform: uppercase;
-    border-radius: 6px;
-    display: inline-block;
-    transition: all 0.3s ease 0s;
-    text-decoration: none;
+    width: 90%;
+    display: block;
+    border-bottom: 0.3rem solid transparent;
+    transition: all 0.3s;
 }
 
-.main_button:hover {
-    color: #766b6b !important;
-    text-decoration: none;
-    font-weight: 700 !important;
-    letter-spacing: 10px;
-    background: #d9cece;
-    -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
-    -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
-    transition: all 0.3s ease 0s;
+.form__input:placeholder-shown + .form__label {
+    opacity: 0;
+    /*visibility: hidden;*/
+    -webkit-transform: translateY(-4rem);
+    transform: translateY(-4rem);
 }
-
-.go-modal-button {
-    border: none;
-    background: #404040;
-    width: 140px;
-    height: 50px;
-    color: #ffffff !important;
-    font-weight: 100;
-    padding: 15px;
-    text-transform: uppercase;
-    border-radius: 6px;
-    display: inline-block;
-    transition: all 0.3s ease 0s;
-    text-decoration: none;
-}
-
-.go-modal-button:hover {
-    color: #766b6b !important;
-    text-decoration: none;
-    font-weight: 600 !important;
-    letter-spacing: 10px;
-    background: #d9cece;
-    -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
-    -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
-    transition: all 0.3s ease 0s;
-}
-
-.button_cont {
-    padding-bottom: 70px;
-}
-
-/*.modal-open .container-fluid, .modal-open .container {*/
-/*    -webkit-filter: blur(3px) grayscale(90%);*/
-/*}*/
 
 /*$char-w: 1ch;*/
 /*$gap: .5*$char-w;*/
@@ -86,7 +270,6 @@ body {
 /*$in-w: $n-char*($char-w + $gap);*/
 /*in-w = calc(7 * calc(1ch + 0.5 * 1ch) - calc(0.5 * 1ch)*/
 
-/* Code modal */
 .form-modal input {
     display: block;
     margin: 2em auto;
@@ -100,51 +283,41 @@ body {
     letter-spacing: calc(0.5 * 1ch);
 }
 
+.form-modal {
+    transform: scale(2.0);
+}
+
 .form-modal input:focus {
     outline: none;
-    color: #465b71;
-}
-
-/* Name modal */
-.form-name-modal input {
-    width: 370px;
-    display: block;
-    margin: 2em auto;
-    color: #465b71;
-    border: none;
-    border-bottom: solid 2px;
-    padding: 0;
-    border-bottom-color: dimgrey;
-    font: 6ch droid sans mono, consolas, monospace;
-}
-
-.form-name-modal input:focus {
-    outline: none;
-    color: #465b71;
+    /*color: #465b71;*/
+    color: #f0f0f0;
 }
 
 #enter-input-code {
-    margin-left: 120px;
+    width: 180px;
 }
 
-.modal.fade .modal-dialog {
-    -webkit-transform: scale(0.1);
-    -moz-transform: scale(0.1);
-    -ms-transform: scale(0.1);
-    transform: scale(0.1);
-    top: 300px;
-    opacity: 0;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+/*Name input*/
+.form-name-input input {
+    display: block;
+    margin: 2em auto;
+    border: none;
+    padding: 0;
+    width: 360px;
+    color: #f0f0f0;
+    border-bottom: 1px solid #696969;
+    background-color: transparent;
+    /*background: repeating-linear-gradient(90deg, #ffffff 0, #ffffff 1ch, transparent 0, transparent calc(1ch + .5 * 1ch)) 0 100% / calc(5 * calc(1ch + 0.5 * 1ch) - calc(0.5 * 1ch)) 1px no-repeat;*/
+    font: 5ch droid sans mono, consolas, monospace;
+    letter-spacing: calc(0.5 * 1ch);
 }
 
-.modal.fade.in .modal-dialog {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    -webkit-transform: translate3d(0, -300px, 0);
-    transform: translate3d(0, -300px, 0);
-    opacity: 1;
+.form-name-input {
+    transform: scale(1.5);
+}
+
+.form-name-input input:focus {
+    outline: none;
+    /*color: #465b71;*/
+    color: #f0f0f0;
 }
