--- a/app/static/assets/css/index.css
+++ b/app/static/assets/css/index.css
@@ -7,9 +7,61 @@ html, body {
 }
 
 @media only screen and (max-width: 600px) {
+    #arrow-name-input {
+        padding-top: 10px;
+    }
+
+    #arrow-name-input-enter {
+        margin-top: -60px;
+        transform: rotate(180deg);
+    }
+
+    #arrow-pass-input {
+        padding-top: 10px;
+    }
+
+    #arrow-pass-input-enter {
+        margin-top: 5px;
+        transform: rotate(180deg);
+    }
+
+    .form-name-input input {
+        width: 220px;
+    }
+
+    .form-name-input input[type="password"] {
+        width: 260px;
+        font: 3ch droid sans mono, consolas, monospace;
+    }
 }
 
 @media only screen and (min-width: 600px) {
+    #arrow-name-input {
+        padding-top: 1px;
+    }
+
+    #arrow-name-input-enter {
+        margin-top: 10px;
+        transform: rotate(180deg);
+    }
+
+    #arrow-pass-input {
+        padding-top: 1px;
+    }
+
+    #arrow-pass-input-enter {
+        margin-top: 10px;
+        transform: rotate(180deg);
+    }
+
+    .form-name-input input {
+        width: 360px;
+    }
+
+}
+
+#arrow-code-input {
+    padding-top: 100px;
 }
 
 #buttons-container {
@@ -28,6 +80,16 @@ html, body {
 }
 
 #name-input {
+    position: relative;
+    top: 20%;
+    display: none;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 1s;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+#pass-input {
     position: relative;
     top: 20%;
     display: none;
@@ -105,6 +167,7 @@ div {
     animation-duration: 1s;
 }
 
+
 @-webkit-keyframes fadeIn {
     0% {
         opacity: 0;
@@ -149,7 +212,6 @@ div {
 
 .arrow div {
     position: absolute;
-    margin-top: 100px;
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -303,7 +365,6 @@ hr.style14 {
     margin: 2em auto;
     border: none;
     padding: 0;
-    width: 360px;
     color: #f0f0f0;
     border-bottom: 1px solid #696969;
     background-color: transparent;
@@ -318,228 +379,54 @@ hr.style14 {
 
 .form-name-input input:focus {
     outline: none;
-    /*color: #465b71;*/
     color: #f0f0f0;
 }
 
 
 /* Check box styles */
 
-/*
-=====
-LEVEL 1. CORE STYLES
-=====
-*/
 
-.toggle{
-  --uiToggleSize: var(--toggleSize, 20px);
-  --uiToggleIndent: var(--toggleIndent, .4em);
-  --uiToggleBorderWidth: var(--toggleBorderWidth, 2px);
-  --uiToggleColor: var(--toggleColor, #000);
-  --uiToggleDisabledColor: var(--toggleDisabledColor, #868e96);
-  --uiToggleBgColor: var(--toggleBgColor, #fff);
-  --uiToggleArrowWidth: var(--toggleArrowWidth, 2px);
-  --uiToggleArrowColor: var(--toggleArrowColor, #fff);
-
-  display: inline-block;
-  position: relative;
+input[type="checkbox"] + label {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border: 10px solid #555;
+    border-radius: 100%;
+    transform: translate(-50%, -50%);
+    transition: all ease-out 200ms;
+    text-indent: 90px;
+    font: normal normal 30px/60px "Helvetica";
+    white-space: nowrap;
+    color: #555;
+    user-select: none;
 }
 
-.toggle__input{
-  position: absolute;
-  left: -99999px;
+input[type="checkbox"] + label:after {
+    content: "";
+    position: absolute;
+    width: 0px;
+    height: 25px;
+    border-bottom: 10px solid #22b573;
+    border-left: 10px solid #22b573;
+    top: 25%;
+    left: 45%;
+    transform-origin: bottom left;
+    transform: rotate(-45deg);
+    opacity: 0;
+    transition: all ease-out 200ms;
 }
 
-.toggle__label{
-  display: inline-flex;
-  min-height: var(--uiToggleSize);
-  padding-left: calc(var(--uiToggleSize) + var(--uiToggleIndent));
+input[type="checkbox"]:checked + label {
+    border: 10px solid #22b573;
+    color: white;
 }
 
-.toggle__input:not(:disabled) ~ .toggle__label{
-  cursor: pointer;
+input[type="checkbox"]:checked + label:after {
+    opacity: 1;
+    width: 70px;
 }
 
-.toggle__label::before,
-.toggle__label::after{
-  content: "";
-  box-sizing: border-box;
-  width: 1em;
-  height: 1em;
-  font-size: var(--uiToggleSize);
-
-  position: absolute;
-  left: 0;
-  top: 0;
+#chk {
+    display: none;
 }
 
-.toggle__label:before{
-  border: var(--uiToggleBorderWidth) solid var(--uiToggleColor);
-  z-index: 2;
-}
-
-.toggle__input:disabled ~ .toggle__label::before{
-  border-color: var(--uiToggleDisabledColor);
-}
-
-.toggle__input:focus ~ .toggle__label::before{
-  box-shadow: 0 0 0 2px var(--uiToggleBgColor), 0 0 0px 4px var(--uiToggleColor);
-}
-
-.toggle__input:not(:disabled):checked:focus ~ .toggle__label::after{
-  box-shadow: 0 0 0 2px var(--uiToggleBgColor), 0 0 0px 4px var(--uiToggleColor);
-}
-
-.toggle__input:not(:disabled) ~ .toggle__label::after{
-  background-color: var(--uiToggleColor);
-  opacity: 0;
-}
-
-.toggle__input:not(:disabled):checked ~ .toggle__label::after{
-  opacity: 1;
-}
-
-.toggle__text{
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-/*
-The arrow size and position depends from sizes of square because I needed an arrow correct positioning from the top left corner of the element toggle
-*/
-
-.toggle__text::before{
-  content: "";
-  box-sizing: border-box;
-  width: 0;
-  height: 0;
-  font-size: var(--uiToggleSize);
-
-  border-left-width: 0;
-  border-bottom-width: 0;
-  border-left-style: solid;
-  border-bottom-style: solid;
-  border-color: var(--uiToggleArrowColor);
-
-  position: absolute;
-  top: .5428em;
-  left: .2em;
-  z-index: 3;
-
-  transform-origin: left top;
-  transform: rotate(-40deg) skew(10deg);
-}
-
-.toggle__input:not(:disabled):checked ~ .toggle__label .toggle__text::before{
-  width: .5em;
-  height: .25em;
-  border-left-width: var(--uiToggleArrowWidth);
-  border-bottom-width: var(--uiToggleArrowWidth);
-  will-change: width, height;
-  transition: width .1s ease-out .2s, height .2s ease-out;
-}
-
-/*
-=====
-LEVEL 2. PRESENTATION STYLES
-=====
-*/
-
-/*
-The demo skin
-*/
-
-.toggle__input:disabled ~ .toggle__label{
-  opacity: .24;
-  cursor: not-allowed;
-}
-
-.toggle__label::before,
-.toggle__label::after{
-  border-radius: 2px;
-}
-
-/*
-The animation of switching states
-*/
-
-.toggle__input:not(:disabled) ~ .toggle__label::before,
-.toggle__input:not(:disabled) ~ .toggle__label::after{
-  opacity: 1;
-  transform-origin: center center;
-  will-change: transform;
-  transition: transform .2s ease-out;
-}
-
-.toggle__input:not(:disabled) ~ .toggle__label::before{
-  transform: rotateY(0deg);
-  transition-delay: .2s;
-}
-
-.toggle__input:not(:disabled) ~ .toggle__label::after{
-  transform: rotateY(90deg);
-}
-
-.toggle__input:not(:disabled):checked ~ .toggle__label::before{
-  transform: rotateY(-90deg);
-  transition-delay: 0s;
-}
-
-.toggle__input:not(:disabled):checked ~ .toggle__label::after{
-  transform: rotateY(0deg);
-  transition-delay: .2s;
-}
-
-.toggle__text::before{
-  opacity: 0;
-}
-
-.toggle__input:not(:disabled):checked ~ .toggle__label .toggle__text::before{
-  opacity: 1;
-  transition: opacity .1s ease-out .3s, width .1s ease-out .5s, height .2s ease-out .3s;
-}
-
-/*
-=====
-LEVEL 3. SETTINGS
-=====
-*/
-
-.toggle{
-  --toggleColor: #690e90;
-  --toggleBgColor: #9b59b6;
-  --toggleSize: 50px;
-}
-
-/*
-=====
-DEMO
-=====
-*/
-
-/*body{*/
-/*  min-h///eight: 100vh;*/
-/*  margin: 0;    */
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  */
-/*  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Open Sans, Ubuntu, Fira Sans, Helvetica Neue, sans-serif;  */
-/*  background-color: #9b59b6;*/
-/*}*/
-
-/*.page{*/
-/*  margin: auto;  */
-/*  padding-left: 10px;*/
-/*  padding-right: 10px;*/
-/*  order: 1;*/
-/*}*/
-
-.page__toggle{
-  font-size: 28px;
-  font-weight: 700;
-  color: #fff;
-}
-
-.page__toggle:nth-child(n+2){
-  margin-top: 50px;
-}
