--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -119,11 +119,10 @@
         <form action="" method="post" id="enter-session-pass-form">
             {% csrf_token %}
             <div class="form-name-input">
-                <input type="password" id="enter-input-password" placeholder="password" required/>
+                <input name="password" type="password" id="enter-input-password" placeholder="password" required/>
             </div>
         </form>
 
-        <br>
         <br>
         <br>
         <br>
