--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -19,7 +19,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
           name='viewport'/>
     <!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
+{#    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>#}
 
     <!-- CSS Files -->
     {#  <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />#}
