--- a/app/templates/old_index.html
+++ b/app/templates/old_index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+{#<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">#}
 
 {#<p class='text-center'>#}
 {#<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#demo">#}
